fix: NavBarColumn <768px and collapsing bug fixed.

--- a/css/_4navbar.css
+++ b/css/_4navbar.css
@@ -214,6 +214,12 @@
   .navbar.responsive ul li.dropdown.dropped {
     height: auto;
   }
+  #NavBarColumn.navbar ul li.dropdown {
+    height: auto !important;
+  }
+  #NavBarColumn.navbar:not(.responsive) ul li.dropdown.force-collapse {
+    display: none;
+  }
   .dropdown.dropped .dropdown-content {
     box-shadow: none;
   }
