--- a/css/theme.css
+++ b/css/theme.css
@@ -269,7 +269,8 @@ input.is-invalid:focus {
 }
 
 #mysbMiddle .navbar li.icon-responsive a:not(:hover),
-#mysbMiddle .navbar ul li.no-collapse > a:not(:hover) {
+#mysbMiddle .navbar ul li.no-collapse > a:not(:hover),
+#mysbMiddle .navbar .dropdown-item.no-collapse > a:not(:hover)  {
   background-color: rgba(255,255,255,.25);
 }
 
